--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
     name: uk-dairy-dashboard
-    runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:server
+    runtime: node
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
+      - key: NODE_ENV
+        value: production
